--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -10,25 +10,13 @@
             android:title="Reset team and event">
             <intent android:action="com.aquamorph.frcmanager.activities.Setup"/>
         </PreferenceScreen>
-        <EditTextPreference
-            android:defaultValue="0000"
-            android:inputType="number"
-            android:key="teamNumber"
-            android:summary="Your teams number"
-            android:title="Team Number"/>
-        <EditTextPreference
-            android:defaultValue="2015"
-            android:inputType="number"
-            android:key="year"
-            android:summary="Select the year"
-            android:title="Competition Year"/>
         <ListPreference
-            android:key="theme"
-            android:title="App Theme"
-            android:summary="Choose between there different color schemes"
             android:defaultValue="light"
             android:entries="@array/theme"
-            android:entryValues="@array/theme_values"/>
+            android:entryValues="@array/theme_values"
+            android:key="theme"
+            android:summary="Choose between there different color schemes"
+            android:title="App Theme"/>
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -37,7 +25,7 @@
         <PreferenceScreen
             android:key="settings_version"
             android:summary="Created by Christian Colglazier"
-            android:title="Version 0.1.1"/>
+            android:title="Version 0.2.0"/>
         <Preference
             android:summary="www.thebluealliance.com"
             android:title="Data from the Blue Alliance">
