--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,12 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".activities.MainActivity">
     <item
+        android:id="@+id/refresh_all"
+        android:icon="@drawable/refresh_icon"
+        android:orderInCategory="100"
+        android:title="@string/refresh_icon"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
