--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -25,7 +25,7 @@
         <PreferenceScreen
             android:key="settings_version"
             android:summary="Created by Christian Colglazier"
-            android:title="Version 0.2.1"/>
+            android:title="@string/version_text"/>
         <Preference
             android:summary="www.thebluealliance.com"
             android:title="Data from the Blue Alliance">
