--- a/app/src/main/res/layout/fragment_team_schedule.xml
+++ b/app/src/main/res/layout/fragment_team_schedule.xml
@@ -26,6 +26,6 @@
         android:textSize="24sp"
         android:padding="8dp"
         android:textColor="?textOnBackground"
-        android:text="No Data"/>
+        android:text="@string/no_data"/>
 
 </RelativeLayout>
