--- a/app/src/main/res/layout/fragment_team_schedule.xml
+++ b/app/src/main/res/layout/fragment_team_schedule.xml
@@ -23,9 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textSize="24sp"
         android:padding="8dp"
+        android:text="@string/no_data"
         android:textColor="?textOnBackground"
-        android:text="@string/no_data"/>
+        android:textSize="24sp"/>
 
 </RelativeLayout>
