--- a/app/src/main/res/layout/rank.xml
+++ b/app/src/main/res/layout/rank.xml
@@ -34,19 +34,20 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingRight="16dp">
 
             <TextView
                 android:id="@+id/team_number"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:text="@string/sample_team"
                 android:textColor="?textOnBackground"
-                android:textSize="@dimen/team_number_text"
-                android:textStyle="bold"/>
+                android:textSize="@dimen/team_number_text"/>
 
             <TextView
                 android:id="@+id/details"
